# overzetten

./: .pre-commit-config.yaml  conftest.py  plan.md  pyproject.toml  todo.md
.github/workflows/: ci.yaml
examples/: whatsapp_example.py
src/overzetten/: __init__.py  __main__.py  whatsapp.py
src/overzetten/__tests__/: __init__.py
src/overzetten/__tests__/fixtures/: __init__.py  models.py
src/overzetten/__tests__/integration/: test_fastapi_integration.py  test_whatsapp_integration.py
src/overzetten/__tests__/unit/advanced/: test_caching.py  test_generics_and_metaclass.py  test_inheritance.py  test_pydantic_config.py  test_relationships.py  test_self_referential_relationships.py
src/overzetten/__tests__/unit/config/: test_circular_mapping.py  test_field_exclusion.py  test_field_inclusion.py  test_field_mapping.py  test_inherited_mapping.py  test_model_naming.py
src/overzetten/__tests__/unit/core/: test_basic_dto_creation.py  test_defaults_and_required.py  test_nullable_field_handling.py  test_required_field_logic.py  test_type_conversion.py
src/overzetten/__tests__/unit/edge_cases/: test_complex_sqlalchemy.py  test_error_handling.py
src/overzetten/__tests__/unit/performance/: test_benchmarks.py  test_concurrent_access.py  test_deep_inheritance.py  test_large_models.py  test_load_testing.py  test_memory_usage.py
src/overzetten/inertia/__template__/: main.py  pyproject.toml
src/overzetten/inertia/__template__/src/app/views/: package-lock.json  package.json
test/: conftest.py  test_example.py
test/fixtures/: sqlalchemy_models.py
test/unit/advanced/: test_inheritance.py  test_relationships.py  test_self_referential_relationships.py
test/unit/config/: test_field_exclusion.py  test_field_inclusion.py  test_field_mapping.py  test_inherited_mapping.py  test_model_naming.py
test/unit/core/: test_basic_dto_creation.py  test_defaults_and_required.py  test_nullable_field_handling.py  test_required_field_logic.py  test_type_conversion.py
