[project]
name = "overzetten"
version = "0.1.0"
description = "Instantly create pydantic schemas from your sqlalchemy models"
readme = "README.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2,<3",
]

[project.scripts]
overzetten = "overzetten:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
