[project]
name = "overzetten"
version = "0.1.0"
description = "Instantly create pydantic schemas from your sqlalchemy models"
readme = "README.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2,<3",
    "sqlalchemy>=2,<3",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
    "uvicorn>=0.35.0",
]

[tool.uv_build]
exclude = ["src/overzetten/__tests__"]

[tool.ruff]
target-version = "py311"
line-length = 120
include = ["pyproject.toml"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/overzetten/__tests__/**/*" = ["S101", "PLR2004", "INP001"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
